--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
 @import url('https://fonts.cdnfonts.com/css/eurostile-mn');
 
+.blue-gradient{
+    background: radial-gradient(circle, rgba(0, 110, 172, 0.7) 1%, rgba(0, 0, 0, 0) 70%);  
+}
+
+.green-gradient{
+    background: radial-gradient(circle, rgba(0, 255, 224, 0.7) 1%, rgba(0, 0, 0, 0) 70%);  
+}
+
+.green-gradient-sm{
+    background: radial-gradient(circle, rgba(0, 255, 224, 0.3) 1%, rgba(0, 0, 0, 0) 50%);  
+}
+
 .header-font{
     font-family: 'Eurostile MN', sans-serif !important;
 }
@@ -9,8 +21,15 @@
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: white;
 }
-main{
+.bg-noise-image{
     background-image: url(./assets/background-image.svg);
     background-size: cover;
     background-position: center;
+}
+.tool-box-border{
+    background-image: url(./assets/tool-box.svg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
 }
