--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.cdnfonts.com/css/eurostile-mn');
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 .blue-gradient{
     background: radial-gradient(circle, rgba(0, 110, 172, 0.5) 1%, rgba(0, 0, 0, 0) 70%);  
 }
